--- a/dashboard/violations.html
+++ b/dashboard/violations.html
@@ -23,6 +23,8 @@
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
+    <link href='https://fonts.googleapis.com/css?family=Ubuntu:400,400italic,500,500italic,700,700italic' rel='stylesheet' type='text/css'>
+
     <script src="//www.parsecdn.com/js/parse-1.6.0.min.js"></script>
 
     <link href="css/jquery.growl.css" rel="stylesheet" type="text/css" />
@@ -284,10 +286,10 @@
                 $("#violation_number").val('2893498234-01');
                 $("#citation_number").val(2893498234);
                 $("#violation_description").val('Expired License Plates (Tags)');
-                $("#warrant_status").val(true);
+                $("#warrant_status").val('TRUE');
                 $("#warrant_number").val('WA23942');
                 $("#status").val('FTA WARRANT ISSUED');
-                $("#status_date").val('4/15/2015');
+                $("#status_date").val('9/14/2015');
                 $("#fine_amount").val(140.02);
             });
         });
